[package]
name = "tokeneer"
description = "Another tokenizer crate"
version = "0.1.0"
edition = "2024"
authors = ["YdrMaster <ydrml@hotmail.com>"]
repository = "https://github.com/InfiniTensor/tokeneer"
documentation = "https://docs.rs/tokeneer"
license = "MIT"
readme = "README.md"
keywords = ["tokenizer", "bpe", "nlp"]
categories = ["algorithms", "encoding"]

[dependencies]
regex = "1.11"
memchr = "2.7"
patricia_tree = "0.9"
log = "0.4"
fancy-regex = "0.14.0"
ggus = "0.4"
memmap2 = "0.9"
